--- a/public/css/guest/style.css
+++ b/public/css/guest/style.css
@@ -65,6 +65,62 @@
     background-color: #5e30c1;
 }
 
+.before-information {
+	padding: 0;
+	position: relative;
+	margin-bottom: -50px;
+	margin-top: -250px;
+}
+
+.information {
+	padding: 80px 0;
+	font-family: 'Poppins', sans-serif;
+	font-weight: 500;
+	letter-spacing: 2px;
+	font-size: 10px;
+	position: relative;
+	background-image: linear-gradient(to right, #697ded, #5e30c1);
+	color: #fff;
+}
+.information h4 {
+	font-size: 12px;
+}
+.information p {
+	color: rgba(255,255,255,.6);
+	text-transform: none;
+	letter-spacing: .5px;
+	font-size: 12px;
+	font-weight: 300;
+}
+.information ul {
+	margin: 0;
+	padding: 0;
+	padding-top: 10px;
+	list-style: none;
+}
+.information a {
+	color: #fff;
+	border-bottom: 1px solid #fff;
+	padding-bottom: 2px;
+}
+
+.information a:hover {
+	color: rgba(255,255,255,.6);
+	text-decoration: none;
+}
+.information ul li a {
+	border-bottom: none;
+	font-weight: 500;
+	color: rgba(255,255,255,.6);
+	letter-spacing: 1px;
+	text-transform: none;
+	font-size: 12px;
+}
+.information ul li a:hover {
+	text-decoration: none;
+	color: #fff;
+}
+
 /* Tablet Style */
 @media only screen and (min-width : 651px) and (max-width: 960px){
 
@@ -105,4 +161,5 @@
         margin-bottom: 25px
     }
 
+    
 }
