--- a/public/css/guest/style.css
+++ b/public/css/guest/style.css
@@ -133,6 +133,10 @@
     text-align:center;
 }
 
+i{
+    font-size: 1rem;
+}
+
 /* Tablet Style */
 @media only screen and (min-width : 651px) and (max-width: 960px){
 
