--- a/public/css/guest/style.css
+++ b/public/css/guest/style.css
@@ -10,8 +10,10 @@
 	height: 300px;
 }
 .choose {
-    height: 850px;
     background: white;
+}
+.choose .container{
+    height: max-content;
 }
 
 .choose h4 {
@@ -75,8 +77,7 @@
 	font-family: 'Poppins', sans-serif;
 	font-weight: 500;
 	letter-spacing: 2px;
-	font-size: 10px;
-	position: relative;
+    font-size: 10px;
 	background-image: linear-gradient(to right, #697ded, #5e30c1);
 	color: #fff;
 }
@@ -196,7 +197,6 @@ i{
         width: 100px;
     }
     .information {
-        margin-top: 250px;
         max-height: max-content;
         padding-top: 0px;
     }
